// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextNavigation > renders a navigation component with an active item 1`] = `
<div>
  <nav
    class="context-navigation"
  >
    <div
      class="context-navigation-header"
    >
      Navigation
    </div>
    <div
      class="ui list"
      role="list"
    >
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined"
            href="/front-page"
          >
            Welcome to Plone!
          </a>
        </div>
      </div>
      <div
        class="active item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined in_path"
            href="/blog"
          >
            Blog
            <div
              class="content active-indicator"
            >
              <svg
                class="icon"
                style="height: 30px; width: auto; fill: currentColor;"
              />
            </div>
          </a>
        </div>
      </div>
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined"
            href="/users"
          >
            Users
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ContextNavigation > renders a navigation component with an active item when its subchildren are accessed 1`] = `
<div>
  <nav
    class="context-navigation"
  >
    <div
      class="context-navigation-header"
    >
      Navigation
    </div>
    <div
      class="ui list"
      role="list"
    >
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-folder in_path"
            href="/folder2/folder21"
            title=""
          >
            Folder21
          </a>
        </div>
      </div>
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-document"
            href="/folder2/folder21/doc211"
            title=""
          >
            Doc211
          </a>
        </div>
      </div>
      <div
        class="active item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-document"
            href="/folder2/folder21/doc212"
            title=""
          >
            Doc212
            <div
              class="content active-indicator"
            >
              <svg
                class="icon"
                style="height: 30px; width: auto; fill: currentColor;"
              />
            </div>
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ContextNavigation > renders a navigation component with only one active item even if there are similar item names 1`] = `<div />`;

exports[`ContextNavigation > renders a navigation slot component without active items 1`] = `
<div>
  <nav
    class="context-navigation"
  >
    <div
      class="context-navigation-header"
    >
      Navigation
    </div>
    <div
      class="ui list"
      role="list"
    >
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined"
            href="/front-page"
          >
            Welcome to Plone!
          </a>
        </div>
      </div>
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined"
            href="/blog"
          >
            Blog
          </a>
        </div>
      </div>
      <div
        class="item level-1"
        role="listitem"
      >
        <div
          class="content"
        >
          <a
            class="contenttype-undefined"
            href="/users"
          >
            Users
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
